nesc-frontend/src/test/resources/integration/programs/good/good13/C.nc
/* Correct usage of a task with post expression. */

configuration C
{
}
implementation
{
   components M;
}
