nesc-frontend/src/test/resources/integration/programs/bad/bad28/C.nc
/* Using a generic component as normal. */

configuration C
{
}
implementation
{
   components M;
}
